Oyun analizi ve oturum yönetimi için yeni DTO'lar eklendi. OyunController'da oyun bitirme işlemi ve analiz sonuçları için yeni metotlar tanımlandı. GameProperties sınıfında oyun süreleri güncellendi. Frontend'de yeni bileşenler eklendi ve stil güncellemeleri yapıldı. Ayrıca, bağımlılık güncellemeleri gerçekleştirildi.